--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ All colors MUST be HSL.
 
 @layer base {
   :root {
-    --background: 210 20% 98%;
+    --background: #1D3FAE ;
     --foreground: 222 47% 11%;
 
     --card: 0 0% 100%;
