--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,9 @@ body {
     background-color: hsl(var(--background));
     color: hsl(0deg 0% 100%);
 }
-*{
+/* *{
   color: white;
-}
+} */
 .logo {
   height: 6em;
   padding: 1.5em;
